--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="mystyle.css" />
   <title>Home</title>
   
 </head>
