--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Home</title>
+  
+<head>
+  <meta charset="utf-8">
+  <title>Contact</title>
   
 </head>
 <body>
@@ -28,7 +31,13 @@
 	
 	<section id="content">		 
 		
-    <p><center>HOLA! GUTEN TAG! WELCOME!</center></p>
+		<p><center>Feel free to contact me any of the following ways</p>
+      <ul>
+		  <li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
+		  <li><a href="ktecox@gmail.com">E-mail</a></li>
+      <li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+		  <li><a href="https://twitter.com/ktecox">Twitter</a></li>
+		</ul>
 	</section>
 	
 	<footer>
