--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Home</title>
+
+<head>
+  <meta charset="utf-8">
+  <title>Resume</title>
   
 </head>
 <body>
@@ -28,7 +31,43 @@
 	
 	<section id="content">		 
 		
-    <p><center>HOLA! GUTEN TAG! WELCOME!</center></p>
+    <p><h1>Education</h1></p>
+  <p>Bachelor of Arts, Professional Writing	<right>Expected May 2017</right></p>
+	Michigan State University, East Lansing, MI		
+		Honors College
+
+	High School Diploma	May 2013
+	University of Illinois Laboratory High School, Urbana, IL
+
+Work Experiences
+	Swim Lesson Instructor	Summers 2012-2013
+	Champaign Park District, Champaign, IL
+  
+•	Jeff Ellis Swimming certified swim instructor
+•	Collaborated with other instructors to plan better lessons for the children.
+•	Received Swim Instructor of the Week award.
+•	Communicated with parents to address their child’s progress in lessons.
+•	Spent time outside of the workplace planning successful lessons for students.
+	Library Assistant	Aug. 2012-May 2013	University of Illinois Laboratory High School Library, Urbana, IL
+•	Aided with the daily operations of the library.
+•	Processed new books for circulation.
+•	Shelved books.
+•	Found missing books and re-entered them in the system.
+Corn De-taseller	Summer 2011
+Monsanto Seed Company, Farmer City, IL
+
+Activities
+•	Living In Great Harmony Together Bryan Hall Representative, East Lansing, MI
+•	Honors Students Actively Recruiting member, East Lansing, MI
+•	University of Illinois Laboratory High School Girls Varsity Soccer Team, Urbana, IL 
+•	Volunteer, Champaign Public Library, Champaign, IL 
+•	University Laboratory High School Girls Varsity Swim Team, Urbana, IL 
+•	Volunteer, Habitat for Humanity, Clarksdale, MS 
+•	Editor-in-Chief, Online Gargoyle, University Laboratory High School, Urbana, IL
+•	Volunteer, Carle Hospital, Urbana, IL
+
+      
+</p>
 	</section>
 	
 	<footer>
