--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Home</title>
+
+<head>
+  <meta charset="utf-8">
+  <title>About</title>
   
 </head>
 <body>
@@ -28,7 +31,8 @@
 	
 	<section id="content">		 
 		
-    <p><center>HOLA! GUTEN TAG! WELCOME!</center></p>
+    <p><center>Hello!</center></p>
+    <p><center>I am currently majoring in Professional Writing at Michigan State University (add more later...)</center></p>
 	</section>
 	
 	<footer>
