--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Home</title>
+  
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
   
 </head>
 <body>
@@ -25,17 +28,36 @@
       <li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	
-	<section id="content">		 
-		
-    <p><center>HOLA! GUTEN TAG! WELCOME!</center></p>
-	</section>
-	
-	<footer>
+  
+  <item>
+    <p><a href="#"><img src="image"/></a></p>
+  </item>
+ 
+  <item>
+    <p><a href="#"><img src="image"/></a></p>
+  </item>
+
+  <item>
+    <p><a href="#"><img src="image"/></a></p>
+  </item>
+  
+  <explanation>
+    <p>Beautiful example #1</p>
+  </explanation>  
+  
+  <explanation>
+    <p>Beautiful example #2</p>
+  </explanation>  
+  
+  <explanation>
+    <p>Beautiful example #3</p>
+  </explanation>  
+
+<footer>
 		
 		<p>Copyright &copy; 2014, All Rights Reserved</p>
 	
-	</footer>
+</footer>
 
 </div>
 
