--- a/about.html
+++ b/about.html
@@ -1,8 +1,3 @@
-<!doctype html>
-
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
 
 <head>
   <meta charset="utf-8">
@@ -16,23 +11,25 @@
 
 
 	<header>
-		<h1>Katherine E. Cox</h1>
+    <div id="name">
+		      <h1>Katherine E. Cox</h1>
+    </div>
 	</header>
 	
 	<nav>		
 		<ul>
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
 		  <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	
 	<section id="content">		 
 		
-    <p><center>Hello!</center></p>
-    <p><center>I am currently majoring in Professional Writing at Michigan State University (add more later...)</center></p>
+    <p>Hello!</p>
+    <p>I am currently majoring in English with a minor of Teaching English to Speakers of Other Languages at Michigan State University (add more later...)</p>
 	</section>
 	
 	<footer>
