--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,4 @@
-<!doctype html>
 
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
@@ -14,10 +9,12 @@
 
 <div id="container">
 
-
-	<header>
-		<h1>Katherine E. Cox</h1>
+<header>
+    <div id="name">
+		      <h1>Katherine E. Cox</h1>
+    </div>
 	</header>
+
 	
 	<nav>		
 		<ul>
