--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!doctype html>
 
 <head>
   <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
   <title>Home</title>
   
 </head>
@@ -12,10 +10,12 @@
 <div id="container">
 
 
-	<header>
-		<h1>Katherine E. Cox</h1>
+<header>
+    <div id="name">
+		      <h1>Katherine E. Cox</h1>
+    </div>
 	</header>
-	
+
 	<nav>		
 		<ul>
 		  <li><a href="index.html">Home</a></li>
