--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,17 @@
-<!doctype html>
 
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
   
 </head>
 <body>
-
-
 <div id="container">
 
 
 	<header>
-		<h1>Katherine E. Cox</h1>
+    <div id="name">
+		      <h1>Katherine E. Cox</h1>
+    </div>
 	</header>
 	
 	<nav>		
