--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,3 @@
-<!doctype html>
-
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
 
 <head>
   <meta charset="utf-8">
@@ -14,10 +9,12 @@
 
 <div id="container">
 
-
-	<header>
-		<h1>Katherine E. Cox</h1>
+<header>
+    <div id="name">
+		      <h1>Katherine E. Cox</h1>
+    </div>
 	</header>
+
 	
 	<nav>		
 		<ul>
@@ -67,7 +64,7 @@ Activities
 •	Volunteer, Carle Hospital, Urbana, IL
 
       
-</p>
+      AT SOME POINT WILL BE A RESUME</center></p>
 	</section>
 	
 	<footer>
