--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!doctype html>
 
 <head>
   <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="mystyle.css" />
   <title>Home</title>
   
 </head>
