--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,9 @@
 
+<!doctype html>
+
 <head>
   <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="mystyle.css" />
   <title>Resume</title>
   
 </head>
