--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
   </explanation>  
   
   <explanation>
-    <p>Beautiful example #3</p>
+    <p>Beautiful example #3 LALALALALALAAAAAA</p>
   </explanation>  
 
 <footer>
