Put Section tag in

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 		  <li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-  
+<section> 
   <item>
     <p><a href="#"><img src="image"/></a></p>
   </item>
@@ -46,8 +46,9 @@
   </explanation>  
   
   <explanation>
-    <p>Beautiful example #3 LALALALALALAAAAAA</p>
+    <p>Beautiful example #3</p>
   </explanation>  
+</section>
 
 <footer>
 		
