--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 	</nav>
 <section> 
   <item>
-    <p><a href="#"><img src="tdor.jpg"/></a></p>
+    <p><a href="#"><img src="tdor_poster.jpg"/></a></p>
   </item>
  
   <item>
