handout and poster

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
 	</nav>
 <section> 
   <item>
-    <p><a href="#"><img src="tdor_poster.jpg"/></a></p>
+    <p><a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a></p>
   </item>
  
   <item>
-    <p><a href="#"><img src="image"/></a></p>
+    <p><a href="handout.pdf"><img src="handout.jpg"/></a></p>
   </item>
 
   <item>
