--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,11 @@
 		</ul>
 	</nav>
 <section> 
-  <item>
-    <p><a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a></p>
+  <item> 
+    <p><a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a>
+  <explanation>
+    Beautiful example #1</p>
+  </explanation> 
   </item>
  
   <item>
@@ -37,9 +40,7 @@
     <p><a href="#"><img src="image"/></a></p>
   </item>
   
-  <explanation>
-    <p>Beautiful example #1</p>
-  </explanation>  
+
   
   <explanation>
     <p>Beautiful example #2</p>
