--- a/portfolio.html
+++ b/portfolio.html
@@ -25,30 +25,34 @@
 		</ul>
 	</nav>
 <section> 
+  <p>
   <item> 
-    <p><a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a>
+    <a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a>
   <explanation>
-    Beautiful example #1</p>
+    Beautiful example #1
   </explanation> 
   </item>
+  </p>
  
+  <p>
   <item>
-    <p><a href="handout.pdf"><img src="handout.jpg"/></a></p>
+   <a href="handout.pdf"><img src="handout.jpg"/></a>
+      <explanation>Beautiful example #2
+  </explanation>  
   </item>
+  </p>
 
+<p>
   <item>
-    <p><a href="#"><img src="image"/></a></p>
+    <a href="#"><img src="image"/></a>
+     <explanation>
+    Beautiful example #3
+  </explanation> 
   </item>
+  </p>
   
-
   
-  <explanation>
-    <p>Beautiful example #2</p>
-  </explanation>  
   
-  <explanation>
-    <p>Beautiful example #3</p>
-  </explanation>  
 </section>
 
 <footer>
