--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,13 @@
   <p>
   <item>
    <a href="handout.pdf"><img src="handout.jpg"/></a>
-      <explanation>Beautiful example #2
-  </explanation>  
+      <explanation>Beautiful example #2</explanation>  
   </item>
   </p>
 
 <p>
   <item>
-    <a href="#"><img src="image"/></a>
+    <a href="reader.pdf"><img src="reader.jpg"/></a>
      <explanation>
     Beautiful example #3
   </explanation> 
