--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
 		</ul>
 	</nav>
 <section> 
-  <item> 
+  <div class="item"> 
     <a href="tdor_poster.pdf"><img src="tdor_poster.jpg"/></a>
-  <explanation>
+  </div>
+  <div class="explanation">
     Beautiful example #1
-  </explanation> 
-  </item>
+  </div> 
  
   <item>
    <a href="handout.pdf"><img src="handout.jpg"/></a>
