--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,17 @@
     Beautiful example #1
   </div> 
  
-  <item>
-   <a href="handout.pdf"><img src="handout.jpg"/></a>
-      <explanation>Beautiful example #2</explanation>  
-  </item>
+  <div class="item">
+   <a href="handout.pdf"><img src="handout.jpg"/></a> 
+  </div>
+   <div class="explanation">Beautiful example #2</div> 
 
-  <item>
-    <a href="reader.pdf"><img src="reader.jpg"/></a>
-     <explanation>
+  <div class="item">
+    <a href="reader.pdf"><img src="reader.jpg"/></a> 
+  </div>
+  <div class="explanation">
     Beautiful example #3
-  </explanation> 
-  </item>
+  </div>
   
 </section>
 
