--- a/portfolio.html
+++ b/portfolio.html
@@ -31,19 +31,22 @@
   <div class="explanation">
     Beautiful example #1
   </div> 
- 
+</section>
+
+<section> 
   <div class="item">
    <a href="handout.pdf"><img src="handout.jpg"/></a> 
   </div>
    <div class="explanation">Beautiful example #2</div> 
+</section>
 
+<section>
   <div class="item">
     <a href="reader.pdf"><img src="reader.jpg"/></a> 
   </div>
   <div class="explanation">
     Beautiful example #3
   </div>
-  
 </section>
 
 <footer>
