--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     <a href="tdor_poster.pdf"><img src="tdor_poster.jpg" /></a>
   </div>
   <div class="explanation">
-    Beautiful example #1
+    I created this poster in the fall of 2013. It advertises the various events that were occurring on the Michigan State University campus in honor of the Transgender Day of Remembrance. This poster was distributed throughout campus, and was an essential advertising tool for the week. 
   </div> 
 </section>
 
@@ -37,7 +37,7 @@
   <div class="item">
    <a href="handout.pdf"><img src="handout.jpg" /></a> 
   </div>
-   <div class="explanation">Beautiful example #2</div> 
+   <div class="explanation">This handout was created for a group presentation for my class Introduction to Professional Writing in the spring of 2014. For the project, I collaborated with two other students, however I created the handout alone. This handout was used to supplement the presentation, which was on the affects that technology is having on the field of book editing and publishing.</div> 
 </section>
 
 <section>
@@ -45,7 +45,7 @@
     <a href="reader.pdf"><img src="reader.jpg" /></a> 
   </div>
   <div class="explanation">
-    Beautiful example #3
+		I created this timeline for a class in Spring 2013. It charts the arch of my life through the lens of the books that I was reading at different stages of development.
   </div>
 </section>
 
