--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
 	
 	<section id="content">		 
 		
-    <p><center>HOLA! GUTEN TAG! WELCOME!</center></p>
+    <p>Hello, and welcome to my website!</p>
+	<p>I am Katherine Cox, and I am currently majoring in English at Michigan 
+	State University, and upon graduating I will enter a year-long internship, 
+	and at the end of this process, I will be certified to teach English/Language 
+	Arts at the secondary education level in the state of Michigan. I also hope to 
+	complete a minor in Teaching English to Speakers of Other Language (TESOL).</p> 
+	<p>On the personal front, I am an avid reader. At this moment, my favorite book 
+	is <i>Brave New World</i> by Aldous Huxley, but my favorite author is Tamora Pierce. 
+	I am also a huge How I Met Your Mother, Game of Thrones, and Glee fan--and I'm also
+	loving Resurrection.</p>
+	<p>On this website, you can find examples of my previous work, my resume, and various 
+	ways to contact me, should you have any questions. Enjoy!</p>
 	</section>
 	
 	<footer>
