--- a/resume.html
+++ b/resume.html
@@ -28,43 +28,9 @@
 		</ul>
 	</nav>
 	
-	<section id="resume">		 
-    Katherine Cox
-    <p>Bryan Hall, 209 West Brody Road, Room B213, East Lansing, MI 48825</p>
-    <p>Phone: 217-418-4953 | Email: coxkath5@msu.edu</p>   
-    <p>Education</p>
-    <p>Bachelor of Arts, English Expected May 2017</p>
-    <p>Michigan State University, East Lansing, MI</p>
-    <p>High School Diploma May 18, 2013</p>
-    <p>University of Illinois Laboratory High School Library, Urbana, IL</p>
-    <p>Work Experiences</p> 
-    <p>Swim Lesson Instructor</p>
-    <p>Champaign Park District Summers 2012-2013</p>
-    <p>Champaign, IL</p>  
-    <p><ul>
-    <li>Jeff Ellis Swimming certified swim instructor</li>
-    <li>Collaborated with other instructors to plan better lessons for the children.</li>
-    <li>Received Swim Instructor of the Week award</li>
-    <li>Communicated with parents to address their child’s progress in lessons.</li>
-    <li>Spent time outside of the workplace planning successful lessons for students.</li>
-    </ul></p>
-Library Assistant
-University of Illinois Laboratory High School Library, Urbana, IL
-§ Aided with the daily operations of the library.
-§ Processed new books for circulation.
-§ Shelved books.
-§ Found missing books and re-entered them in the system.
-Activities
-Aug. 2012-May 2013
-§ Living In Great Harmony Together Bryan Hall Representative, East Lansing, MI § Honors Students Actively Recruiting member, East Lansing, MI
-§ Volunteer, Champaign Public Library, Champaign, IL
-§ Volunteer, Habitat for Humanity, Clarksdale, MS
-§ Editor-in-Chief, Online Gargoyle, University Laboratory High School, Urbana, IL § Volunteer, Carle Hospital, Urbana, IL
-Skills
-§ Microsoft Office (Word, Excel, PowerPoint) § HTML, CSS
-§ Adobe Indesign
-§ Typing speed: 53 wpm</p>
-	</section>
+<section>
+<a href="resume.pdf"><img src="resume_pic.jpg" /></a>
+</section>
 	
 	<footer>
 		
