slightly bigger pic

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 	</nav>
 	
 <section>
-<a href="resume.pdf"><img src="resume_pic.jpg" /></a>
+<a href="resume.pdf"><img src="resume_pic2.jpg" /></a>
 </section>
 	
 	<footer>
