back to section

--- a/resume.html
+++ b/resume.html
@@ -28,9 +28,9 @@
 		</ul>
 	</nav>
 	
-<class div=resume>
+<section>
 <a href="resume.pdf"><img src="resume_pic2.jpg" /></a>
-</div>
+<section>
 	
 	<footer>
 		
