--- a/resume.html
+++ b/resume.html
@@ -28,9 +28,9 @@
 		</ul>
 	</nav>
 	
-<section>
+<class div=resume>
 <a href="resume.pdf"><img src="resume_pic2.jpg" /></a>
-<section>
+</div>
 	
 	<footer>
 		
