--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
 <header>
     <div id="name">
-		      <h1>Katherine E. Cox</h1>
+		      <h1><a href="index.html">Katherine E. Cox</a></h1>
     </div>
 	</header>
 
