--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 	</nav>
 	
 <div class="resume">
-<a href="resume.pdf"><img src="resume_pic2.jpg" /></a>
+<a href="resume.pdf"><img src="resume_border.jpg" /></a>
 </div>
 	
 	<footer>
