--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
       <li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
 		  <li><a href="https://twitter.com/ktecox">Twitter</a></li>
 		</ul>
+		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
 	</section>
 	
 	<footer>
