--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,15 @@
 	</nav>
 	
 	<section id="content">		 
-		
-		<p><center>Feel free to contact me any of the following ways</p>
+		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
+		<p>>Feel free to contact me any of the following ways</p>
       <ul>
 		  <li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
 		  <li><a href="ktecox@gmail.com">E-mail</a></li>
       <li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
 		  <li><a href="https://twitter.com/ktecox">Twitter</a></li>
 		</ul>
-		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
+		
 	</section>
 	
 	<footer>
