--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 	
 	<section id="content">		 
 		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
-		<p>>Feel free to contact me any of the following ways</p>
+		<p><center>Also feel free to contact me through the alternative methods below:</center></p>
       <ul>
 		  <li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
 		  <li><a href="ktecox@gmail.com">E-mail</a></li>
