--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,14 @@
 	
 	<section id="content">		 
 		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
-		<p><center>Also feel free to contact me through the alternative methods below:</center></p>
+		<p><center>Also feel free to contact me through the alternative methods below:</p>
       <ul>
 		  <li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
 		  <li><a href="ktecox@gmail.com">E-mail</a></li>
       <li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
 		  <li><a href="https://twitter.com/ktecox">Twitter</a></li>
 		</ul>
-		
+		</center>
 	</section>
 	
 	<footer>
