--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,8 @@
 	</nav>
 	<section> 
 		<div class="item"> 
-			<a href="tdor_poster.pdf"><img src="tdor_poster.jpg"></a>
+			<a href="tdor_poster.pdf"><img alt="Transgender Day of Remembrance poster 
+			preview" src="tdor_poster.jpg"></a>
 		</div>
 		<div class="explanation">
 			I created this poster in the fall of 2013. It advertises the various events
@@ -31,7 +32,8 @@
 	</section>
 	<section> 
 		<div class="item">
-			<a href="handout.pdf"><img src="handout.jpg" /></a> 
+			<a href="handout.pdf"><img alt= Book editing and publishing presentation 
+			handout preview" src="handout.jpg"></a> 
 		</div>
 		<div class="explanation">This handout was created for a group presentation for my 
 		class Introduction to Professional Writing in the spring of 2014. For the project, 
@@ -41,7 +43,8 @@
 	</section>
 	<section>
 		<div class="item">
-			<a href="reader.pdf"><img src="reader.jpg" /></a> 
+			<a href="reader.pdf"><img alt="Life of a Reader timeline preview"
+			src="reader.jpg"></a> 
 		</div>
 		<div class="explanation">
 			I created this timeline for a class in Spring 2013. It charts the arch of my 
