--- a/resume.html
+++ b/resume.html
@@ -1,44 +1,31 @@
-
 <!doctype html>
-
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Resume</title>
-  
-</head>
-<body>
-
-
-<div id="container">
-
-<header>
-    <div id="name">
-		      <h1>Katherine E. Cox</h1>
-    </div>
+	<head>
+		<meta charset="utf-8">
+		<link type="text/css" rel="stylesheet" href="mystyle.css" />
+	<title>Resume</title>
+	</head>
+	<body>
+		<div id="container">
+	<header>
+		<div id="name">
+			<h1>Katherine E. Cox</h1>
+		</div>
 	</header>
-
-	
 	<nav>		
 		<ul>
-		  <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-		  <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="resume.html">Resume</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
-	</nav>
-	
-<div class="resume">
-<a href="resume.pdf"><img src="resume_border.jpg" /></a>
-</div>
-	
+	</nav>	
+		<div class="resume">
+			<a href="resume.pdf"><img src="resume_border.jpg" alt="Preview of a PDF of my 
+			resume"></a>
+		</div>
 	<footer>
-		
 		<p>Copyright &copy; 2014, All Rights Reserved</p>
-	
 	</footer>
-
-</div>
-
-</body>
+	</div>
+	</body>
 </html>
