--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 	</nav>	
 		<div class="resume">
 			<a href="resume.pdf"><img src="resume_border.jpg" alt="Preview of a PDF of my 
-			resume"></a>
+			9resume"></a>
 		</div>
 	<footer>
 		<p>Copyright &copy; 2014, All Rights Reserved</p>
