--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,35 @@
-
 <!doctype html>
-
-<head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="mystyle.css" />
-  <title>Contact</title>
-  
-</head>
-<body>
-
-
-<div id="container">
-
-<header>
-    <div id="name">
-		      <h1>Katherine E. Cox</h1>
-    </div>
+	<head>
+		<meta charset="utf-8">
+		<link type="text/css" rel="stylesheet" href="mystyle.css" />
+	<title>Contact</title>
+	</head>
+	<body>
+	<header>
+		<div id="name">
+			<h1>Katherine E. Cox</h1>
+		</div>
 	</header>
-
-	
 	<nav>		
 		<ul>
-		  <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-		  <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="resume.html">Resume</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	
 	<section id="content">		 
 		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
-		<p><center>Also feel free to contact me through the alternative methods below:</p>
-      <ul>
-		  <li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
-		  <li><a href="ktecox@gmail.com">E-mail</a></li>
-      <li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
-		  <li><a href="https://twitter.com/ktecox">Twitter</a></li>
+		<p>Also feel free to contact me through the alternative methods below:</p>
+		<ul>
+			<li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
+			<li><a href="ktecox@gmail.com">E-mail</a></li>
+			<li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			<li><a href="https://twitter.com/ktecox">Twitter</a></li>
 		</ul>
-		</center>
 	</section>
-	
 	<footer>
-		
 		<p>Copyright &copy; 2014, All Rights Reserved</p>
-	
 	</footer>
-
-</div>
-
-</body>
+	</body>
 </html>
