--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 		<ul>
 			<li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
 			<li><a href="ktecox@gmail.com">E-mail</a></li>
-			<li><a href="http://www.linkedin.com/profile/view?id=221066225&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			<li><a href="http://www.linkedin.com/profile/view?id=221066225">LinkedIn</a></li>
 			<li><a href="https://twitter.com/ktecox">Twitter</a></li>
 		</ul>
 	</section>
