--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,15 @@
 	</nav>
 	<section id="content">		 
 		<script type="text/javascript" src="http://form.jotform.us/jsform/41056498763161"></script>
-		<p>Also feel free to contact me through the alternative methods below:</p>
-		<ul>
-			<li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
-			<li><a href="ktecox@gmail.com">E-mail</a></li>
-			<li><a href="http://www.linkedin.com/profile/view?id=221066225">LinkedIn</a></li>
-			<li><a href="https://twitter.com/ktecox">Twitter</a></li>
-		</ul>
+		<div class="methods">
+			<p>Also feel free to contact me through the alternative methods below:</p>
+		</div>
+			<ul>
+				<li><a href="https://www.facebook.com/ktecox">Facebook</a></li>
+				<li><a href="ktecox@gmail.com">E-mail</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=221066225">LinkedIn</a></li>
+				<li><a href="https://twitter.com/ktecox">Twitter</a></li>
+			</ul>
 	</section>
 	<footer>
 		<p>Copyright &copy; 2014, All Rights Reserved</p>
