--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 	<head>
 		<meta charset="utf-8">
+		<link href='http://fonts.googleapis.com/css?family=Glass+Antiqua' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="mystyle.css" />
 	<title>Home</title>
 	</head>
