--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 	<head>
 		<meta charset="utf-8">
+		<link type="text/css" rel="stylesheet" href="mystyle.css"/>
 		<link href='http://fonts.googleapis.com/css?family=Glass+Antiqua' rel='stylesheet' type='text/css'>
-		<link type="text/css" rel="stylesheet" href="mystyle.css" />
+	<header>
 	<title>Home</title>
+	</header>
 	</head>
 	<body>
 	<header>
